--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
+    "dotenv": "^16.4.7",
+    "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
